--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "app"
         ],
         "psr-4": {
             "App\\": "app/"
