--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "gulp": "^3.8.8",
+    "gulp-watch": "^4.3.5"
   },
   "dependencies": {
-    "laravel-elixir": "^4.0.0",
+    "angular": "^1.5.0",
+    "angular-bootstrap-contextmenu": "^0.9.6",
+    "angular-ui-bootstrap": "^1.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "bootstrap-sass": "^3.0.0",
-    "font-awesome": "^4.5.0"
+    "font-awesome": "^4.5.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-shell": "^0.5.2",
+    "laravel-elixir": "^4.2.1",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   }
 }
