--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "angular": "^1.5.0",
     "angular-bootstrap-contextmenu": "^0.9.6",
     "angular-ui-bootstrap": "^1.2.4",
+    "angular-ui-tree": "^2.14.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "bootstrap-sass": "^3.0.0",
