--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gulp-concat": "^2.6.0",
     "gulp-shell": "^0.5.2",
     "laravel-elixir": "^4.2.1",
+    "lodash": "^4.6.1",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "x2js": "^2.0.0"
   }
 }
